src/styles/global.css
@import 'tailwindcss';

@plugin '@tailwindcss/typography';

@font-face {
  font-family: Lora;
  font-style: normal;
  font-weight: 400 700;
  font-display: block;
  src: url("/fonts/Lora/Lora-VariableFont_wght.ttf") format("truetype");
}

@font-face {
  font-family: Lora;
  font-style: italic;
  font-weight: 400 700;
  font-display: block;
  src: url("/fonts/Lora/Lora-Italic-VariableFont_wght.ttf") format("truetype");
}

@theme {
  --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-serif: "Lora", ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

@layer base {
  :root {
    /* https://www.djangoproject.com/styleguide/#colors */
    --green-light: #93D7B7;
    --link-color: #20AA76;
    --color-text: #0C3C26;
    --text-light: #798780;
  }

  ::selection {
    background: var(--green-light);
  }

  .prose {
    h1 {
      text-align: center;
    }
  }
}

@layer utilities {
  .nav-item {
    @apply relative text-white text-sm before:absolute before:bottom-0 before:left-0 before:w-full before:h-[1px] before:bg-white before:scale-x-0 before:origin-right before:transition-transform before:duration-300 hover:before:scale-x-100 hover:before:origin-left
  }

  .btn {
    @apply rounded border border-gray-300 bg-gray-100 px-4 py-2;
    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
  }
}

@layer components {
  .article-list {
    @apply mx-auto flex flex-col gap-4;
    max-width: 65ch;

    h3 {
      @apply text-2xl font-medium font-serif;
    }

  }

  .post {
    @apply relative my-3;

    header {
      @apply text-xl
    }

    header a:before {
      content: '';
      position: absolute;
      left: 0;
      top: 0;
      right: 0;
      bottom: 0;
    }
  }

  .prose .footnotes {
    border-top: 1px solid #ccc;
    margin-top: 2rem;
    position: relative;
  }

  .prose .footnotes h2 {
    position: absolute !important;
    top: -0.73em;
    left: 50%;
    transform: translateX(-50%);
    background: white;
    padding: 0 0.4rem !important;
    margin: 0 !important;
    font-size: 0.8rem !important;
    color: #666 !important;
    /* Override sr-only and prose styles */
    clip: unset !important;
    width: auto !important;
    height: auto !important;
    clip-path: none !important;
  }
}

@utility prose {
  --tw-prose-links: var(--link-color);
}

